--- a/Dag3-pandas/0-SeriesIndexDtype.ipynb
+++ b/Dag3-pandas/0-SeriesIndexDtype.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b7e13ee3",
+   "id": "272f81bd",
    "metadata": {},
    "source": [
     "# Hva er en \"Series\""
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e16ecbf",
+   "id": "d04c5763",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9490dd6b",
+   "id": "f7030881",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f27576d4",
+   "id": "fcf1df30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b86804c",
+   "id": "96d9f30f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5022cdb",
+   "id": "8d7ba443",
    "metadata": {},
    "source": [
     "### En kolonne i Pandas kalles en \"Series\", det er ofte disse vi opererer på."
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53be5056",
+   "id": "ee6be0c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8276fd98",
+   "id": "afde838d",
    "metadata": {},
    "source": [
     "#### Det vil si at dataene i cellene i hver rad, for seg, bør inneholde uniform data, helst...\n",
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b4777b0",
+   "id": "37ed0ccd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acce17b4",
+   "id": "acc6be75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e08b86c",
+   "id": "761d4e6d",
    "metadata": {},
    "source": [
     "##### Ja... Vi har faktisk lagt en kopi av dataframeen inni en celle i dataframeen, men er det å anbefale?"
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb4a4d18",
+   "id": "37c3e0a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f87a6ad",
+   "id": "456b683f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0c29426",
+   "id": "508e2cf9",
    "metadata": {},
    "source": [
     "<hr>"
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4911305",
+   "id": "8a62fb7b",
    "metadata": {},
    "source": [
     "# \"Indexer\" - navn på kolonner og rader"
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "897d4ce9",
+   "id": "4be0469c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d94f4c8",
+   "id": "8f21dc88",
    "metadata": {},
    "source": [
     "\"Index\" er da ikke en \"sann kolonne\", men \"navnet på raden\". \\\n",
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "350365fc",
+   "id": "21b6d9c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f0168a0",
+   "id": "2dbf65ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fd2302f",
+   "id": "f67bc399",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35eda576",
+   "id": "b9b0ff4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5363c1f6",
+   "id": "b0cfabfd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7cc9280",
+   "id": "922a1efd",
    "metadata": {},
    "source": [
     "# Hvilke \"dtypes\" har vi?"
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afdfd25c",
+   "id": "8112c73f",
    "metadata": {},
    "source": [
     "https://pbpython.com/pandas_dtypes.html"
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2d21c7b",
+   "id": "68d82aa8",
    "metadata": {},
    "source": [
     "<table border=\"1\" class=\"colwidths-given table table-condensed docutils\">\n",
@@ -296,6 +296,16 @@
     "</tr>\n",
     "</tbody>\n",
     "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87379d4c",
+   "metadata": {},
+   "source": [
+    "### Bonus: \"Category\" er noe vi bør se på\n",
+    "Men man risikerer at den lettere går i stykker, og blir \"typecastet\" tilbake til string. \\\n",
+    "https://towardsdatascience.com/staying-sane-while-adopting-pandas-categorical-datatypes-78dbd19dcd8a"
    ]
   }
  ],
