--- a/Dag3-pandas/2-Omkoding.ipynb
+++ b/Dag3-pandas/2-Omkoding.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "399d8e86",
+   "id": "ca5f94d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4429eeef",
+   "id": "ca726fdc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8c1f93a",
+   "id": "dd855846",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6393ffc5",
+   "id": "2b455162",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c4de2c8",
+   "id": "916878e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa55f0f4",
+   "id": "1e9723b0",
    "metadata": {},
    "source": [
     "### Døp om variabler innad i kolonner, er dette \"omkoding\"?"
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f20d544",
+   "id": "bef789a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4483f5da",
+   "id": "e7f6d1d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81288d8b",
+   "id": "d70ca994",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0165d166",
+   "id": "b7cbfde9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47c3b582",
+   "id": "787affaf",
    "metadata": {},
    "source": [
     "### Opprett en ny kolonne med \"grupperingsvariabler\", avhengig av en \"katalog\" fra KLASS"
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecc5163c",
+   "id": "9676bbb0",
    "metadata": {},
    "source": [
     "Landsinndeling\n",
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6aa00cdb",
+   "id": "c92c34a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93048c7a",
+   "id": "72c1a143",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9da99d07",
+   "id": "2a2c6e81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,28 +195,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbee09ee",
+   "id": "87e94a2b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Vi ti tilfeldige rader \n",
     "comp[['region', 'landsdel_navn']].sample(10)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "166b2cad",
+   "id": "364873ad",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Unike fylker som fortsatt mangler landsinndeling\n",
+    "# Unike fylker som fortsatt mangler landsinndeling\n",
     "pd.unique(comp[comp['landsdel_kode'].isna()]['region'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bf40beb",
+   "id": "a10857e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +228,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62457ced",
+   "id": "c7d2cc26",
    "metadata": {},
    "source": [
     "<hr>"
@@ -235,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0dfcfc30",
+   "id": "22c95af0",
    "metadata": {},
    "source": [
     "### Bonus, mer avansert kode: tildel de resterende fylkene landsdeler med \"Excelredigering\" i ipysheet"
@@ -244,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6545170",
+   "id": "2ff70021",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,10 +256,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7ab457b",
+   "id": "a40f4b4e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Lag en ny \"Omkodingskatalog\"\n",
     "df_landsd = pd.DataFrame(fylk_kod)\n",
     "df_landsd.columns = ['region_code']\n",
     "df_landsd['region'] = ''\n",
@@ -268,20 +270,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7274a64",
+   "id": "86f89958",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Kom frem til en enkelt verdi, eksempel\n",
     "comp[comp['region_code'] == '02']['region'].iloc[0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "175fb233",
+   "id": "56a0e519",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Loop over omkodingskatalogen, tildel regionnavn\n",
     "for i, r in df_landsd.iterrows():\n",
     "    print(r['region_code'])\n",
     "    if r['region_code']:\n",
@@ -292,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1e11e59",
+   "id": "47f92ce5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,10 +306,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e2f3088",
+   "id": "b4c35dbc",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# En liste over alle landsdelene, med kodene deres\n",
     "last = ''\n",
     "for corr in cont:\n",
     "    kod = corr['sourceCode']\n",
@@ -318,18 +323,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0c87723",
+   "id": "9274b557",
    "metadata": {},
    "outputs": [],
    "source": [
-    "landsdel_sheet = sheet.from_dataframe(df_landsd)\n",
+    "# VIser ett sheet, hvor man skal fylle inn landsdel-koden.\n",
+    "landsdel_sheet = sheet.from_dataframe(df_landsd[['landsdel_kode', 'region_code', 'region']])\n",
     "landsdel_sheet "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51750d74",
+   "id": "83a44418",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89a991d0",
+   "id": "f09e376a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,12 +374,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d0a0458",
+   "id": "f2f7a4e9",
    "metadata": {},
    "outputs": [],
    "source": [
     "comp"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0814e96e",
+   "metadata": {},
+   "source": [
+    "# MEN HVA MED LOGGING???\n",
+    "Og bør man lagre omkodingskatalogen som sin egen persistente datakilde?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bebe8591",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
