--- a/Dag3-pandas/3-Kolonnehandtering.ipynb
+++ b/Dag3-pandas/3-Kolonnehandtering.ipynb
@@ -3,18 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ee292e8",
+   "id": "c40f6c3c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "pop = pd.read_csv('../data/mock_sysselsatte/population_2019_30000.csv')\n",
     "comp = pd.read_csv('../data/mock_sysselsatte/companies_2019_30000.csv')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "26598991",
+   "id": "e478a86c",
    "metadata": {},
    "source": [
     "### Repetisjon: Indexing inn til en enkelt verdi"
@@ -23,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "caca8035",
+   "id": "c80f3d9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0abd782",
+   "id": "556856be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c31e9e2a",
+   "id": "4b1f5091",
    "metadata": {},
    "source": [
     "### \"Keep\""
@@ -53,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fe71c82",
+   "id": "05c192d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,16 +64,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a180ba5",
+   "id": "8cda162b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pop[['sex', 'age', 'work_percent']]"
+    "# Alle kolonnene vi vil beholde, inn i en ny dataframe\n",
+    "pop2 = pop[['sex', 'age', 'work_percent']]\n",
+    "pop2"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "101988b6",
+   "id": "b3778ec4",
    "metadata": {},
    "source": [
     "### \"Drop\""
@@ -81,16 +84,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac264f51",
+   "id": "9eb40646",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pop.drop('age', axis = \"columns\")"
+    "# ALle kolonnene vi vil beholde, untatt\n",
+    "pop3 = pop.drop('age', axis = \"columns\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9bc992ee",
+   "id": "a9e472a5",
    "metadata": {},
    "source": [
     "### .columns / .keys()"
@@ -99,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1db88c55",
+   "id": "55fb4519",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8feab9c4",
+   "id": "f434ba86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,16 +122,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9555a021",
+   "id": "be418dd2",
    "metadata": {},
    "source": [
-    "##### Bonus: rename kun med .columns"
+    "##### Bonus: rename kolonner kun med .columns"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f418acb",
+   "id": "7f53772a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7812147e",
+   "id": "b2de7f58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25ae7435",
+   "id": "59c87824",
    "metadata": {},
    "source": [
     "### .rename()"
@@ -157,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59a18e6b",
+   "id": "648cd629",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,6 +172,52 @@
     "}\n",
     "pop.rename(renaming, axis = \"columns\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4df82b97",
+   "metadata": {},
+   "source": [
+    "### .replace()\n",
+    "Erstatt verdier i en eller flere kolonner"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc5a68af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# En dict av dicts med kolonnenavn : dict( fra : til )\n",
+    "val_rep = {\n",
+    "    'sex' : {\n",
+    "        'Menn' : 1,\n",
+    "        'Kvinner' : 2\n",
+    "    },\n",
+    "    'age' : {\n",
+    "        0 : np.nan\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07f390b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pop.replace(val_rep)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42b9cdc6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
