--- a/Dag3-pandas/4-Grupperingsvariabler.ipynb
+++ b/Dag3-pandas/4-Grupperingsvariabler.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19ebd120",
+   "id": "0ba761b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "576f140e",
+   "id": "38988c29",
    "metadata": {},
    "source": [
     "### Nedfiltrering, en essensiell kompetanse"
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c62aa22",
+   "id": "e6c0b196",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e9a9446",
+   "id": "a84273cf",
    "metadata": {},
    "source": [
     "### Lag grupperingsvariabler etter en inndeling av alder"
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72fc5d26",
+   "id": "b978d6ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "132d22bb",
+   "id": "e4807c10",
    "metadata": {},
    "source": [
     "### Litt mer sofistikert eller \"generell\""
@@ -70,27 +70,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebf7bc5a",
+   "id": "35e97d32",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Ta en ny kopi av datasettet\n",
     "pop3 = pop.copy()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a1d5640",
+   "id": "7d52fc84",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Se på datatypene til datasettet\n",
     "pop3.dtypes"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37219202",
+   "id": "e08ccd3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7f5e964",
+   "id": "2b14508a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2f90c3b",
+   "id": "f5d4fe3f",
    "metadata": {},
    "source": [
     "### Sett en verdi i en kolonne basert på en verdi i en annen kolonne, med ett .loc-søk"
@@ -135,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "daead230",
+   "id": "51d950b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38d862ed",
+   "id": "fb169980",
    "metadata": {},
    "source": [
     "### Det samme, bare at vi looper over en dict med \"nivåer\""
@@ -153,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4206fbd",
+   "id": "05345c16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,9 +168,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c10c1f9e",
+   "metadata": {},
+   "source": [
+    "De senere vil skrive over de første, noe som kan være ett problem om vi ikke kan garantere at keysene kommer i rekkefølgen..."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d49299f",
+   "id": "3f2146dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6640b769",
+   "id": "7f51da2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fd7362c",
+   "id": "f8c4d7ed",
    "metadata": {},
    "outputs": [],
    "source": [
