--- a/Dag3-pandas/_Dagsplan_Pandas.ipynb
+++ b/Dag3-pandas/_Dagsplan_Pandas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "777d3f5f",
+   "id": "c81fa320",
    "metadata": {},
    "source": [
     "# Pandas og operasjoner"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54e69b0d",
+   "id": "92c253d6",
    "metadata": {},
    "source": [
     "- “kobling”\n",
@@ -23,7 +23,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "960ac59e",
+   "id": "cb8a7f14",
+   "metadata": {},
+   "source": [
+    "### Husk Boller og koding på onsdag\n",
+    "https://ssbno.sharepoint.com/sites/byraanettet/_layouts/15/Event.aspx?ListGuid=a0801a90-f230-4501-b2bb-a1182a162a94&ItemId=538 \\\n",
+    "Ta gjerne med konkrete problemstillinger"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae3354a9",
+   "metadata": {},
+   "source": [
+    "<hr>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc01bb68",
    "metadata": {},
    "source": [
     "### Repetisjon: \"Når bruker vi lists og dicts?\""
@@ -32,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51970b18",
+   "id": "97da3a86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1438801e",
+   "id": "8680e9f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fd73b17",
+   "id": "c68e27d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "220dd384",
+   "id": "2d313a84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcc57c7d",
+   "id": "4186256b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29bf242b",
+   "id": "2f00f7d4",
    "metadata": {},
    "outputs": [],
    "source": [
